2002-12-11  Zoltan Varga  <vargaz@freemail.hu>

	* FieldBuilder.cs: added 'handle' field which is needed by some new
	code in reflection.c.

2002-12-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TypeBuilder.cs: implemented GetInterfaceMap () when the Type has been
	created.

Fri Nov 8 14:53:03 CET 2002 Paolo Molaro <lupus@ximian.com>

	* ILGenerator.cs: account for the exception object being passed to the
	catch handler to calc max_stack.

2002-09-21  Martin Baulig  <martin@gnome.org>

	* ModuleBuilder.cs (ModuleBuilder.symbol_writer): Make this
	field internal, not private.
	(ModuleBuilder.SymWriter_DefineLocalVariable): Removed.

	* LocalBuilder.cs (LocalBuilder.SetLocalSymInfo): Use the
	ISymbolWriter's DefineLocalVariable() method instead of the
	IMonoSymbolWriter hack.

Mon Sep 16 19:02:58 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* AssemblyBuilder.c: special case some custom attributes.

2002-09-12  Dick Porter  <dick@ximian.com>

	* TypeBuilder.cs: Say _which_ Type has already been created

2002-09-11  Miguel de Icaza  <miguel@ximian.com>

	* ModuleBuilder.cs (GetTypes): Implement.

Tue Sep 10 12:12:51 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* ConstructorBuilder.cs: added a field to hold the handle.

Mon Sep 9 17:31:12 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* TypeBuilder.cs: prepare for the real CreateType implementation.

Tue Aug 27 16:57:18 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* TypeBuilder.cs: remove duplicate code and fix
	named field reading in custom attr.

2002-08-24  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TypeBuilder.cs: UnspecifiedTypeSize is 0.

Wed Aug 14 17:38:41 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* TypeBuilder.cs: ReflectedType and CreateType fixes.

Thu Aug 8 10:25:51 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* AssemblyBuilder.cs: added API to embed managed resources.

2002-08-03  Martin Baulig  <martin@gnome.org>

	* TypeBuilder.cs (TypeBuilder.DeclaringType): Implemented.
